<resources>
    <string name="app_name">DeviceInventoryManagementApp</string>
    <string name="device_list">Device List</string>
    <string name="employee_list">Employee List</string>
    <string name="device_allotted_list">Device Allocation List</string>
    <string name="no_device_added">No device found.</string>
    <string name="no_emp_added">No employee found.</string>
    <string name="no_allocation_added">No device allocation found.</string>
    <string name="device_name">Device Name</string>
    <string name="total_inventory">Total Inventory</string>
    <string name="add_device">Add Device</string>
    <string name="add_emp">Add Employee</string>
    <string name="emp_id">Employee Id</string>
    <string name="emp_name">Employee Name</string>
    <string name="emp_email">Employee Email</string>
    <string name="current_inventory">Current Inventory</string>
    <string name="alert_message">Are you sure you want to delete this record?</string>
    <string name="device_status">Device Status</string>
    <string name="device_date">Return Date</string>
    <string name="status_return">Return</string>
    <string name="status_lost">Lost</string>
    <string name="allocate_device">Allocate Device</string>

    <string name="select_device">Select Device: </string>
    <string name="cancel">Cancel</string>
    <string name="allocate">Allocate</string>

    <string name="issued_menu_filter">Issued</string>
    <string name="returned_menu_filter">Returned</string>
    <string name="lost_menu_filter">Lost</string>
    <string name="all_menu_filter">All</string>



</resources>