<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        style="@style/listItemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/constraints_padding">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5dp"
                android:text="@string/device_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_total_inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5dp"
                android:text="@string/total_inventory"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_current_inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5dp"
                android:text="@string/current_inventory"
                app:layout_constraintStart_toStartOf="@id/tv_total_inventory"
                app:layout_constraintTop_toBottomOf="@id/tv_total_inventory" />

            <ImageView
                android:id="@+id/iv_delete_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_device"
                android:padding="@dimen/list_item_padding"
                android:src="@drawable/trash_icon"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>