<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/fab_margin"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.devicelist.DeviceFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_inventory"
            android:inputType="number"
            android:minEms="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_device" />
</LinearLayout>

