<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/page_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_header_img"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:padding="@dimen/_5dp"
                android:id="@+id/tv_device_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/device_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_header_img" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:padding="@dimen/_5dp"
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:prompt="@string/select_device"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_device_name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_device_name_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:padding="@dimen/_5dp"
                android:id="@+id/autoTextViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_device_name_label">


                <AutoCompleteTextView
                    android:id="@+id/autoTextViewEmployeeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/emp_name"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/device_date"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/autoTextViewLayout" />

            <Button
                android:id="@+id/btn_allocate_device"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/allocate"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_date_picker" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/fab_margin"
                android:textColor="@android:color/black"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_allocate_device"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_allocate_device"
                app:layout_constraintTop_toBottomOf="@+id/btn_date_picker" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>